<resources>
    <string name="app_name">속닥속닥</string>

    <string name="home_rollingpaper_add_content">롤링페이퍼 만들기!</string>
    <string name="home_rollingpaper_made_date">만든 날짜</string>
    <string name="home_rollingpaper_list_content">롤링페이퍼 리스트</string>
    <string name="home_rollingpaper_bookmark">즐겨찾기</string>
    <string name="home_rollingpaper_no_room_content">아직 만들어진 방이 없어요!\n롤링페이퍼 방을 만들고 공유해보아요</string>

    <string name="detail_admin_setting_bottom_sheet_title">이 롤링페이퍼 방은 %s에 만들어졌어요!</string>
    <string name="detail_admin_setting_bottom_sheet_share_link_content">작성자 초대 링크 공유하기</string>
    <string name="shared_code_title">초대코드 복사완료!</string>
    <string name="shared_code_sub_title">초대코드를 친구들에게 전달해주세요!</string>
    <string name="shared_no_reply">아직 아무도 답장을 하지 않았어요\n다른 사람에게도 초대링크를 보내보세요!</string>
    <string name="shared_okay">확인</string>
    <string name="detail_admin_setting_bottom_sheet_delete_room_content">방 삭제하기</string>
    <string name="detail_admin_setting_bottom_sheet_do_nothing">아무것도 안 할래요</string>

    <!-- 방 만들기 -->
    <string name="make_room_bottom_sheet_title">롤링페이퍼 방 이름</string>
    <string name="room_name_hint_title">방 이름을 적어주세요</string>
    <string name="paper_write_content">롤링페이퍼 작성 방법</string>
    <string name="voice_title">음성</string>
    <string name="voice_description_content">직접 음성 녹음을\n할 수 있어요!</string>
    <string name="text_title">텍스트</string>
    <string name="text_description_content">텍스트로 메시지를 써서\n마음을 속닥여요!</string>
    <string name="make_room_title">방 만들기</string>
    <string name="initial_input_number">0/35</string>
    <string name="initial_nickname_number">0/12</string>
    <string name="initial_content_number">0/200</string>
    <string name="initial_and_max_content_number">%d/200</string>
    <string name="initial_and_max_input_number">%d/35</string>
    <string name="make_new_room">조금 전</string>
    <string name="modify_room_name">방 이름 바꾸기</string>

    <string name="record_voice_whisper_title">남기고 싶은 말을 속삭여주세요!</string>
    <string name="record_voice_title_hint">방마다 닉네임을 다르게 쓸 수 있어요!</string>
    <string name="record_voice_nickname">닉네임</string>
    <string name="record_voice_maximum_one_minute">최대 1분</string>
    <string name="record_voice_maximum_minute">01:00</string>
    <string name="record_voice_record_to_press_button">버튼을 눌러 녹음하기</string>
    <string name="record_voice_banner_title">친구와 롤링페이퍼로\n즐겁게 얘기를 나눠보세요!</string>
    <string name="record_voice_listen">녹음 들어보기</string>
    <string name="record_voice_playing">재생하고 있어요!</string>
    <string name="record_voice_nickname_number">%d/12</string>
    <string name="record_voice_cancel">취소</string>
    <string name="record_voice_confirm">완료</string>
    <string name="record_voice_rerecord">다시녹음할래</string>

    <!-- 상세 페이지 -->
    <string name="detail_admin_button_shared_link">초대 링크 보내기</string>
    <string name="detail_admin_content_shared_link">오른쪽 상단 더보기 버튼을 눌러서\n초대 링크를 보낼 수 있어요!</string>
    <string name="detail_user_content_whisper">친구에게 마음을 속삭여보세요!</string>

    <!-- 다이얼로그 -->
    <string name="dialog_delete_room_title">방 삭제하기</string>
    <string name="dialog_delete_room_content">정말 롤링페이퍼 방을 삭제시겠어요?😭</string>
    <string name="dialog_delete_room_button_submit">방 삭제하기</string>
    <string name="dialog_delete_room_button_cancel">안 할래요!</string>
    <string name="dialog_leave_room_title">방 나가기</string>
    <string name="dialog_leave_room_content">정말 롤링페이퍼 방을 나가시겠어요?😭</string>
    <string name="dialog_leave_room_button_submit">방 나가기</string>
    <string name="dialog_leave_room_button_cancel">안 나갈래요!</string>
    <string name="dialog_delete_reply_title">답장 삭제하기</string>
    <string name="dialog_delete_reply_content">정말 답장을 삭제하시겠어요?😭</string>
    <string name="dialog_delete_reply_button_submit">삭제할래요</string>
    <string name="dialog_delete_reply_button_cancel">안 할래요!</string>
    <string name="dialog_report_reply_title">답장 신고하기</string>
    <string name="dialog_report_reply_content">정말 답장을 신고하시겠어요?🚨</string>
    <string name="dialog_report_reply_button_submit">신고할래요</string>
    <string name="dialog_report_reply_button_cancel">안 할래요!</string>
    <string name="dialog_report_reduplicate">이미 신고되었습니다.</string>
    <string name="dialog_report_mine">본인의 답장은 신고할 수 없습니다.</string>
    <string name="dialog_delete_not_mine">본인의 답장만 삭제할 수 있습니다.</string>
    <string name="dialog_delete_mine">본인의 답장은 삭제할 수 없습니다.</string>

    <!-- Toast -->
    <string name="toast_leave_room_success">방에서 탈출했어요!</string>
    <string name="toast_delete_room_success">방이 삭제되었어요!</string>
    <string name="toast_modify_room_name">방 이름이 바뀌었어요!</string>
    <string name="toast_error_occurred">오류가 발생했어요!</string>

    <!-- Ads -->
    <string name="admob_app_id">ca-app-pub-7650949603072085~7019751682</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ad_unit_id_for_real">ca-app-pub-1355727484341694/4961309412</string>
</resources>