<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="264dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog_beige2_radius24">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shared_code_title"
        android:textAppearance="@style/text.20dp.bold.grayscale1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/shared_code_sub_title"
        android:textAppearance="@style/text.16dp.bold.grayscale2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/button_shape_grayscale1_radius10"
        android:gravity="center"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/shared_okay"
        android:textAppearance="@style/text.16dp.bold.white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>