<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/writeTextBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingLeft="16dp"
        android:paddingTop="24dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_voice_nickname"
            android:textAppearance="@style/text.20dp.regular.grayscale1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="닉네임" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/currentTextLengthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_nickname_number"
            android:textAppearance="@style/text.14dp.regular.grayscale1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/nicknameEditText"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_beige2_stroke1_beige3_radius16"
            android:hint="@string/record_voice_title_hint"
            android:maxLength="12"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:textAppearance="@style/text.20dp.regular.grayscale1"
            android:textCursorDrawable="@drawable/cursor_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/record_voice_whisper_title"
            android:textAppearance="@style/text.20dp.regular.grayscale1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nicknameEditText"
            tools:text="남기고 싶은 말을 속삭여주세요!" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/currentContentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/initial_content_number"
            android:textAppearance="@style/text.14dp.regular.grayscale1"
            app:layout_constraintBottom_toTopOf="@id/writeTextEditView"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/writeTextEditView"
            android:layout_width="0dp"
            android:layout_height="176dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_beige2_radius16"
            android:gravity="start"
            android:hint="@string/record_voice_whisper_title"
            android:padding="16dp"
            android:textAppearance="@style/text.20dp.regular.grayscale1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contentTextView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/background_stroke_gray3_radius12"
            android:gravity="center"
            android:text="@string/record_voice_cancel"
            android:textAppearance="@style/text.20dp.regular.grayscale1"
            app:layout_constraintEnd_toStartOf="@+id/completeButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/writeTextEditView"
            tools:text="취소" />

        <View
            android:id="@+id/bannerView"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:background="@drawable/background_beige3_radius16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bannerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/record_voice_banner_title"
            android:textAppearance="@style/text.18dp.regular.grayscale2"
            app:layout_constraintBottom_toBottomOf="@+id/bannerView"
            app:layout_constraintStart_toStartOf="@+id/bannerView"
            app:layout_constraintTop_toTopOf="@+id/bannerView"
            tools:text="친구와 롤링페이퍼로\n즐겁게 얘기를 나눠보세요!" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bannerImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_banner"
            app:layout_constraintBottom_toBottomOf="@+id/bannerView"
            app:layout_constraintEnd_toEndOf="@+id/bannerView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/completeButton"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:background="@drawable/background_grayscale1_radius12"
            android:gravity="center"
            android:text="@string/record_voice_confirm"
            android:textAppearance="@style/text.20dp.regular.white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancelButton"
            app:layout_constraintTop_toBottomOf="@id/writeTextEditView"
            tools:text="완료" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
