<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tdtd.presentation.ui.main.MainViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:titleTextColor="@android:color/white">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/rollingPaperAddImageView"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/background_beige3_stroke1_beige4_radius16"
                android:scaleType="fitXY"
                android:src="@drawable/img_create_room"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/smallAddButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_beige5_radius13"
                android:padding="8dp"
                android:src="@drawable/ic_add_24"
                app:layout_constraintBottom_toTopOf="@+id/rollingPaperAddTextView"
                app:layout_constraintEnd_toEndOf="@+id/rollingPaperAddImageView"
                app:layout_constraintStart_toStartOf="@+id/rollingPaperAddImageView"
                app:layout_constraintTop_toTopOf="@+id/rollingPaperAddImageView"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rollingPaperAddTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/home_rollingpaper_add_content"
                android:textAppearance="@style/text.16dp.bold.beige6"
                app:layout_constraintBottom_toBottomOf="@+id/rollingPaperAddImageView"
                app:layout_constraintEnd_toEndOf="@+id/rollingPaperAddImageView"
                app:layout_constraintStart_toStartOf="@+id/rollingPaperAddImageView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rollingPaPerListTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/home_rollingpaper_list_content"
                android:textAppearance="@style/text.16dp.bold.grayscale3"
                app:layout_constraintStart_toStartOf="@+id/rollingPaperAddImageView"
                app:layout_constraintTop_toBottomOf="@+id/rollingPaperAddImageView"
                tools:text="롤링페이퍼 리스트" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/rollingPaPerCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_rollingpaper_bookmark"
                android:textColor="@color/grayscale3"
                android:textAppearance="@style/text.16dp.bold.grayscale3"
                app:layout_constraintBottom_toBottomOf="@+id/rollingPaPerListTextView"
                app:layout_constraintEnd_toEndOf="@+id/rollingPaperAddImageView"
                app:layout_constraintTop_toTopOf="@+id/rollingPaPerListTextView"
                tools:text="즐겨찾기" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mainRecyclerView"
                bindRoomList="@{viewModel.roomList}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rollingPaPerListTextView"
                tools:listitem="@layout/row_main_user_room_item" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/noRoomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home_rollingpaper_no_room_content"
                android:textAppearance="@style/text.20dp.bold.grayscale4"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rollingPaPerListTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
